Finish the feature of create new post api and swagger specification
(1) Add the redux-logger for debugging in the 'npm start' command.
    Suppose you don't want to use it, just execute 'npm run build' as the same.
(2) Fix the logic bug in post a article.
    The original design, we need to attach the user objectId for post a article.
    We can not do that thing!
    The solution is that we need to verify the JWT token, and get the objectId from them.
    Otherwise, anyone can disguise other people to post a article.
