# server/utils/auth.js
@@ -3,8 +3,8 @@ import Boom from 'boom'
 import Config from '../config'
 
 export const getToken = {
-  ['JWT'](email) {
-    return jwt.sign({ email }, Config.jwt.jwtSecret, { algorithm: 'HS512', expiresIn: Config.jwt.jwtTokenExpiresIn })
+  ['JWT'](userInfo) {
+    return jwt.sign(userInfo, Config.jwt.jwtSecret, { algorithm: 'HS512', expiresIn: Config.jwt.jwtTokenExpiresIn })
   },
   ['EMAIL'](email) {
     return jwt.sign({ email }, Config.jwt.jwtSecret, { algorithm: 'HS256', expiresIn: Config.jwt.emailTokenExpiresIn })
@@ -21,4 +21,14 @@ export const verifyToken = (token) => {
       resolve(decoded)
     })
   })
+}
+
+export const bearerToToken = (authorization) => {
+  const parts = authorization.split(' ')
+  if (parts.length === 2) {
+    const [ schema, credential ] = parts
+    if (/^Bearer$/i.test(schema)) {
+      return credential
+    }
+  }
 }
